# firelink

./: Cargo.toml  LICENSE-MIT  README.md  TEMPLATING.md
old/: config.rs  main-v2.rs  main-v4.rs
res/: example-config.yaml  example-config2.yaml  example-config3.yaml
scripts/: job_a.sh  job_b.py  job_c.py  job_d.sh  job_e.py
src/: config.rs  main-v1.rs  main-v2.rs  main-v3.rs  main.rs
static/: index.html
